# TerraLabel

./: .gitignore  README.md  pyproject.toml
notebooks/: MaskFormer.ipynb  Model Training.ipynb  Model_Training_MaskFormer.ipynb  Segformer.ipynb  SegformerLora.ipynb  UPerNet.ipynb
segmenter/: README.md  eval.py  evaluator.py
segmenter/datasets/: sam.py  utils.py
segmenter/models/: sam.py
training/: dataset.py  trainer.py
